manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "jamindaaks2"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "jamindaaks2"
    spec:
      containers:
        - name: "jamindaaks2"
          image: "tedeshpaacr1.azurecr.io/jamindaaks2"
          ports:
          - containerPort: 80
