manifests/deployment-12.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "tddncaks1-d6b1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "tddncaks1-d6b1"
  template:
    metadata:
      labels:
        app: "tddncaks1-d6b1"
    spec:
      containers:
        - name: "tddncaks1-d6b1"
          image: "tddncaks1acr.azurecr.io/tddncaks1"
          ports:
          - containerPort: 80
