manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "anchauhakscluster"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "anchauhakscluster"
    spec:
      containers:
        - name: "anchauhakscluster"
          image: "abhisheaacr.azurecr.io/anchauhaksclusteraf0b"
          ports:
          - containerPort: 80
