manifests/service-12.yml
apiVersion: v1
kind: Service
metadata:
    name: "tddncaks1-d6b1"
    labels:
        app: "tddncaks1-d6b1"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "tddncaks1-d6b1"
