manifests/service-7.yml
apiVersion: v1
kind: Service
metadata:
    name: "kuvkubtst2"
    labels:
        app: "kuvkubtst2"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: "kuvkubtst2"
